perl (5.14.2-9) UNRELEASED; urgency=low

  [ Dominic Hargreaves ]
  * Add Breaks on various packages which had 5.12/5.14 compatibility
    bugs fixed since squeeze, to help with partial upgrades
  * Add Breaks on ftpmirror for the same reason (Closes: #659799)

  [ Niko Tyni ]
  * No longer disable the 'pie' build flags: the implementation was
    overwriting DEB_BUILD_MAINT_OPTIONS altogether.

 -- Dominic Hargreaves <dom@earth.li>  Tue, 14 Feb 2012 19:38:31 +0000

perl (5.14.2-8) experimental; urgency=low

  [ Dominic Hargreaves ]
  * Include some notes in debian/rules about not using perl more than
    necessary
  * Fix CGI.pm to not use the deprecated shellwords.pl library
  * Don't use _POSIX_PATH_MAX as a fallback PATH_MAX (Closes: #656869)

  [ Niko Tyni ]
  * Pass system zlib information to the Compress-Raw-Zlib build system
    with environment variables instead of patching the source.
  * Make perl-base and perl-modules conflict with defoma (<< 0.11.12),
    whose older versions may break when invoked from preinst scripts
    during squeeze -> wheezy upgrades. (Closes: #657940)
  * Use dpkg-buildflags (when available) to enable hardened builds.
    (Closes: #657853)
    + explicitly disable the 'pie' flags until somebody finds a way
      to make them work with the build system

 -- Dominic Hargreaves <dom@earth.li>  Mon, 06 Feb 2012 21:17:04 +0000

perl (5.14.2-7) unstable; urgency=low

  [ Dominic Hargreaves ]
  * Re-enable tests dist/threads/t/libc.t, ext/Socket/t/socketpair.t
    on GNU/Hurd fixed by changes in hurd (20111206-1)
  * Re-enable test cpan/autodie/t/recv.t on GNU/Hurd fixed by changes in
    eglibc (2.13-22)
  * Add missing POD descriptions in modules from CPAN, to fix Lintian
    warnings (Closes: #650448, #650450, #650451, #650452)
  * Fix AE ligature fallback handling in Pod::Man (thanks to
    Russ Allbery for the fix) (Closes: #652851)
  * Update references to the FSF's postal address (fixes Lintian warnings)